--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__contianer">
-            <a href="/" id="navbar__logo">NEBRAS The King</a>
+            <a href="https://nebrasheeroo700.github.io/Home/" id="navbar__logo">NEBRAS The King</a>
             <div class="navbar__toogle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -18,13 +18,13 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links"> Home </a>
+                    <a href="https://nebrasheeroo700.github.io/Home/" class="navbar__links"> Home </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/maps.html" class="navbar__links"> Maps </a>
+                    <a href="https://nebrasheeroo700.github.io/maps.html/" class="navbar__links"> Maps </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/about.html" class="button"> about </a>
+                    <a href="https://nebrasheeroo700.github.io/about.html/" class="button"> about </a>
                 </li>
             </ul>
         </div>
