--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>King Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <nav class="navbar">
-        <div class="navbar__contianer">
-            <a href="https://nebrasheeroo700.github.io/Home/" id="navbar__logo">NEBRAS The King</a>
-            <div class="navbar__toogle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="https://nebrasheeroo700.github.io/Home/" class="navbar__links"> Home </a>
-                </li>
-                <li class="navbar__item">
-                    <a href="https://nebrasheeroo700.github.io/maps.html/" class="navbar__links"> Maps </a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="https://nebrasheeroo700.github.io/about.html/" class="button"> about </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>3 Modern CSS Hover Effects</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="buttons">
+        <a href="#" class="btn btn-1">Click Me</a>
+        <a href="#" class="btn btn-2">Click Me</a>
+        <a href="#" class="btn btn-3">Click Me</a>
+      </div>
+    </div>
+  </body>
 </html>
